# Gim-stronk

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
app/: index.html
app/src/: main.ts  state.ts  types.ts
app/src/components/: dom.ts  timer.ts
app/src/data/: constants.ts  exercises.ts  template.ts
app/src/engine/: e1rm.ts  fatigue.ts  readiness.ts
app/src/screens/: export.ts  feedback.ts  home.ts  nutrition.ts  readiness.ts  session.ts  set-logger.ts
app/src/storage/: db.ts  export.ts
app/src/styles/: app.css
data/: exercises.json  template_week1.json
ml/: pyproject.toml
ml/src/op_strength/: __init__.py  constants.py  exercise_library.py  types.py
ml/src/op_strength/evaluation/: metrics.py
ml/src/op_strength/features/: extraction.py
ml/src/op_strength/io/: pwa_bridge.py
ml/src/op_strength/models/: fatigue_estimator.py  performance_predictor.py  rule_based.py  shadow.py
ml/src/op_strength/synthetic/: generator.py
