[project]
name = "op-strength-ml"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
